--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,66 +1,122 @@
 version: 2.1
-orbs:
-  slack: circleci/slack@3.4.2
-  aws-cli: circleci/aws-cli@1.0.0
-
-terraform: &terraform
-  docker:
-    - image: hashicorp/terraform:light
-  working_directory: /tmp/workspace/terraform
-
-
 jobs:
-  build:
-    <<: *terraform
+  run_tests:
+    docker:
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - run:
+          name: Install npm dependencies
+          command: |
+            npm install --save
+      - run:
+          name: Run Unit Tests
+          command: |
+            cd docker_apps/node
+            ./node_modules/mocha/bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
+  build_docker_image:
+    docker:
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - run:
+          name: Build Docker image
+          command: |
+            export TAG=0.2.<< pipeline.number >>
+            export IMAGE_NAME=$CIRCLE_PROJECT_REPONAME
+            docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push $DOCKER_LOGIN/$IMAGE_NAME
+  gke_create_cluster:
+    docker:
+      - image: ayobuba/gcp_tf_docker:latest
     environment:
-      BASH: true
+      CLOUDSDK_CORE_PROJECT: ajocard-cluster
     steps:
       - checkout
       - run:
-          name: install curl bash
-          command: apk update && apk add curl curl-dev bash
-      - run:
-          name: terraform init
-          command: terraform init -backend-config=backend.hcl
-      - run:
-          name: terraform validate
-          command: terraform validate
-      - run:
-          name: terraform plan
-          command: terraform plan -input=false
-      - run:
-          name: terraform apply -auto-approve
-          command: terraform apply -auto-approve
-      - run:
-          name: terraform destroy
-          command: terraform destroy -auto-approve
-      - slack/status:
-          fail_only: false
-          mentions: 'ayobuba'
-          only_for_branches: 'dev'
-          webhook: 'https://hooks.slack.com/services/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'
-
-  aws-cli-configure:
-    executor: aws-cli/default
+          name: Create GKE Cluster
+          command: |
+            echo $TF_CLOUD_TOKEN | base64 -d > $HOME/.terraformrc
+            echo $GOOGLE_CLOUD_KEYS | base64 -d > $HOME/gcloud_keys
+            gcloud auth activate-service-account --key-file ${HOME}/gcloud_keys
+            cd tf_gke_cluster
+            terraform init
+            terraform plan -var credentials=$HOME/gcloud_keys -out=plan.txt
+            terraform apply plan.txt
+  gke_deploy_app:
+    docker:
+      - image: ayobuba/gcp_tf_docker:latest
+    environment:
+      CLOUDSDK_CORE_PROJECT: ajocard-challenge
     steps:
       - checkout
-      - aws-cli/setup:
-          profile-name: superhero
       - run:
-          name: List VPC's
-          command: aws ec2 describe-vpcs
-
-
-
-
-# configure context for project and configure slack hooks for project
+          name: Deploy App to GKE
+          command: |
+            export CLUSTER_NAME="ajoke-challenge"
+            export TAG=0.2.<< pipeline.number >>
+            export DOCKER_IMAGE="docker-image=${DOCKER_LOGIN}/${CIRCLE_PROJECT_REPONAME}:$TAG"
+            echo $TF_CLOUD_TOKEN | base64 -d > $HOME/.terraformrc
+            echo $GOOGLE_CLOUD_KEYS | base64 -d > $HOME/gcloud_keys
+            gcloud auth activate-service-account --key-file ${HOME}/gcloud_keys
+            gcloud container clusters get-credentials $CLUSTER_NAME --zone="us-east1-d"
+            cd tf_kubernetes_app
+            terraform init
+            terraform plan -var $DOCKER_IMAGE -out=plan.txt
+            terraform apply plan.txt
+            export ENDPOINT="$(terraform output endpoint)"
+            mkdir -p /tmp/gke/
+            echo 'export ENDPOINT='${ENDPOINT} > /tmp/gke/gke-endpoint
+      - persist_to_workspace:
+          root: /tmp/gke
+          paths:
+            - "*"
+  gke_destroy_cluster:
+    docker:
+      - image: ayobuba/gcp_tf_docker:latest
+    environment:
+      CLOUDSDK_CORE_PROJECT: ajocard-cluster
+    steps:
+      - checkout
+      - run:
+          name: Destroy GKE Cluster
+          command: |
+            export CLUSTER_NAME="ajocard-cluster"
+            export TAG=0.2.<< pipeline.number >>
+            export DOCKER_IMAGE="docker-image=${DOCKER_LOGIN}/${CIRCLE_PROJECT_REPONAME}:$TAG"
+            echo $TF_CLOUD_TOKEN | base64 -d > $HOME/.terraformrc
+            echo $GOOGLE_CLOUD_KEYS | base64 -d > $HOME/gcloud_keys
+            gcloud auth activate-service-account --key-file ${HOME}/gcloud_keys
+            cd tf_gke_cluster
+            terraform init
+            gcloud container clusters get-credentials $CLUSTER_NAME --zone="us-east1-d"
+            terraform destroy -var $DOCKER_IMAGE --auto-approve
+            cd ../tf_gke_cluster/
+            terraform init
+            terraform destroy -var credentials=$HOME/gcloud_keys --auto-approve
 workflows:
-  version: 2
-  build:
+  build_test:
     jobs:
-      - build:
-          context: prenovate-context
-      - aws-cli-configure:
-          context: prenovate-context
+      - run_tests
+      - build_docker_image
+      - gke_create_cluster
+      - gke_deploy_app:
           requires:
-            - build
+            - run_tests
+            - build_docker_image
+            - gke_create_cluster
+      - approve-destroy:
+          type: approval
+          requires:
+            - gke_create_cluster
+            - gke_deploy_app
+      - gke_destroy_cluster:
+          requires:
+            - approve-destroy
