seventh test circle.deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,23 @@
 version: 2.1
 jobs:
+  run_tests:
+    docker:
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - run:
+          name: Install npm dependencies
+          command: |
+            npm install --save
+      - run:
+          name: Run Unit Tests
+          command: |
+            cd docker_apps/node
+            ./node_modules/mocha/bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
   build_docker_image:
     docker:
       - image: circleci/node:12
@@ -11,10 +29,11 @@ jobs:
           name: Build Docker image
           command: |
             export TAG=0.2.<< pipeline.number >>
-#             export IMAGE_NAME=$( echo "$CIRCLE_PROJECT_REPONAME" | tr -s  '[:upper:]'  '[:lower:]' )
-            docker build -t ayobuba/ajocard -t $ayobuba/ajocard:$TAG .
-            echo $DOCKER_PWD | docker login -u $ayobuba --password-stdin
-            docker push $ayobuba/ajocard
+#             export IMAGE_NAME=$CIRCLE_PROJECT_REPONAME
+            export IMAGE_NAME=$( echo "$CIRCLE_PROJECT_REPONAME" | tr -s  '[:upper:]'  '[:lower:]' )
+            docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push $DOCKER_LOGIN/$IMAGE_NAME
   gke_create_cluster:
     docker:
       - image: ayobuba/gcp_tf_docker:latest
@@ -44,7 +63,7 @@ jobs:
           command: |
             export CLUSTER_NAME="ajoke-challenge"
             export TAG=0.2.<< pipeline.number >>
-            export DOCKER_IMAGE="docker-image=ayobuba/${CIRCLE_PROJECT_REPONAME}:$TAG"
+            export DOCKER_IMAGE="docker-image=${DOCKER_LOGIN}/${CIRCLE_PROJECT_REPONAME}:$TAG"
             echo $TF_CLOUD_TOKEN | base64 -d > $HOME/.terraformrc
             echo $GOOGLE_CLOUD_KEYS | base64 -d > $HOME/gcloud_keys
             gcloud auth activate-service-account --key-file ${HOME}/gcloud_keys
@@ -86,10 +105,12 @@ jobs:
 workflows:
   build_test:
     jobs:
+      - run_tests
       - build_docker_image
       - gke_create_cluster
       - gke_deploy_app:
           requires:
+            - run_tests
             - build_docker_image
             - gke_create_cluster
       - approve-destroy:
@@ -100,5 +121,3 @@ workflows:
       - gke_destroy_cluster:
           requires:
             - approve-destroy
-
-# test4
