--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,5 @@
 version: 2.1
 jobs:
-  run_tests:
-    docker:
-      - image: circleci/node:12
-    steps:
-      - checkout
-      - run:
-          name: Install npm dependencies
-          command: |
-            npm install --save
-      - run:
-          name: Run Unit Tests
-          command: |
-            echo "ninth"
-            ./node_modules/mocha/bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
-      - store_test_results:
-          path: test-results
-      - store_artifacts:
-          path: test-results
   build_docker_image:
     docker:
       - image: circleci/node:12
@@ -43,6 +25,7 @@ jobs:
       - run:
           name: Create GKE Cluster
           command: |
+            cat <file> | base64 -w 0
             echo $TF_CLOUD_TOKEN | base64 -d > $HOME/.terraformrc
             echo $GOOGLE_CLOUD_KEYS | base64 -d > $HOME/gcloud_keys
             gcloud auth activate-service-account --key-file ${HOME}/gcloud_keys
@@ -104,12 +87,10 @@ jobs:
 workflows:
   build_test:
     jobs:
-      - run_tests
       - build_docker_image
       - gke_create_cluster
       - gke_deploy_app:
           requires:
-            - run_tests
             - build_docker_image
             - gke_create_cluster
       - approve-destroy:
