--- a/docker_apps/node/Dockerfile
+++ b/docker_apps/node/Dockerfile
@@ -5,7 +5,6 @@ WORKDIR /usr/src/app
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
 COPY package*.json ./
 
 RUN npm install --only=production
@@ -13,7 +12,7 @@ RUN npm install --only=production
 # RUN npm install --only=production
 
 # Bundle app source
-COPY . .
+COPY ../.. .
 
 EXPOSE 5000
 CMD [ "npm", "start" ]
