--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          docker_layer_caching: true
+          docker_layer_caching: false
       - run:
           name: Build Node.js Docker image
           command: |
@@ -22,7 +22,7 @@ jobs:
       steps:
         - checkout
         - setup_remote_docker:
-            docker_layer_caching: true
+            docker_layer_caching: false
         - run:
             name: Build Goland Docker image
             command: |
