--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ LABEL maintainer="Shekarau Edward Buba <shekarau.buba@outlook.com"
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install --only=production
-COPY ../.. .
+COPY ../../.. .
 EXPOSE 5000
 CMD [ "npm", "start" ]
 
@@ -13,7 +13,7 @@ LABEL maintainer="Shekarau Edward Buba <shekarau.buba@outlook.com"
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
-COPY . .
+COPY .. .
 RUN go build -o main
 EXPOSE 8083
 CMD ["./main"]
