--- a/docker_apps/node/package.json
+++ b/docker_apps/node/package.json
@@ -4,7 +4,7 @@
   "description": "nodejs-circleci",
   "main": "app.js",
   "directories": {
-    "test": "../../test"
+    "test": "../../docker/test"
   },
   "scripts": {
     "start": "node app.js",
