--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,8 @@ LABEL maintainer="Shekarau Edward Buba <shekarau.buba@outlook.com"
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install --only=production
-COPY ../../.. .
+COPY ["app.js", "package.json", "./"]
+COPY test views ./
 EXPOSE 5000
 CMD [ "npm", "start" ]
 
@@ -11,9 +12,9 @@ CMD [ "npm", "start" ]
 FROM golang:latest as go-image
 LABEL maintainer="Shekarau Edward Buba <shekarau.buba@outlook.com"
 WORKDIR /app
-COPY go.mod go.sum ./
+COPY go.mod go.sum GoDockerReadMe.md app.go go-docker ./
 RUN go mod download
-COPY .. .
+COPY . .
 RUN go build -o main
 EXPOSE 8083
 CMD ["./main"]
