--- a/docker_apps/go_app/Dockerfile
+++ b/docker_apps/go_app/Dockerfile
@@ -1,7 +1,8 @@
-FROM golang:latest
+#Go Container
+FROM golang:latest as go-image
 LABEL maintainer="Shekarau Edward Buba <shekarau.buba@outlook.com"
 WORKDIR /app
-COPY go.mod go.sum ./
+COPY go.mod go.sum GoDockerReadMe.md app.go go-docker ./
 RUN go mod download
 COPY . .
 RUN go build -o main
