--- a/docker_apps/go_app/Dockerfile
+++ b/docker_apps/go_app/Dockerfile
@@ -1,5 +1,5 @@
 #Go Container
-FROM golang:latest as go-image
+FROM golang:latest
 LABEL maintainer="Shekarau Edward Buba <shekarau.buba@outlook.com"
 WORKDIR /app
 COPY go.mod go.sum GoDockerReadMe.md app.go go-docker ./
