--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
     docker:
       - image: ayobuba/gcp_tf_docker:latest
     environment:
-      CLOUDSDK_CORE_PROJECT: ajocard
+      CLOUDSDK_CORE_PROJECT: ajocard-cluster
     steps:
       - checkout
       - run:
@@ -53,13 +53,13 @@ jobs:
     docker:
       - image: ayobuba/gcp_tf_docker:latest
     environment:
-      CLOUDSDK_CORE_PROJECT: ajocard
+      CLOUDSDK_CORE_PROJECT: ajocard-cluster
     steps:
       - checkout
       - run:
           name: Deploy App to GKE
           command: |
-            export CLUSTER_NAME="ajocard"
+            export CLUSTER_NAME="ajocard-cluster"
             export TAG=0.2.<< pipeline.number >>
             export DOCKER_IMAGE="docker-image=${DOCKER_LOGIN}/${CIRCLE_PROJECT_REPONAME}:$TAG"
             echo $TF_CLOUD_TOKEN | base64 -d > $HOME/.terraformrc
@@ -81,13 +81,13 @@ jobs:
     docker:
       - image: ayobuba/gcp_tf_docker:latest
     environment:
-      CLOUDSDK_CORE_PROJECT: ajocard
+      CLOUDSDK_CORE_PROJECT: ajocard-cluster
     steps:
       - checkout
       - run:
           name: Destroy GKE Cluster
           command: |
-            export CLUSTER_NAME="ajocard"
+            export CLUSTER_NAME="ajocard-cluster"
             export TAG=0.2.<< pipeline.number >>
             export DOCKER_IMAGE="docker-image=${DOCKER_LOGIN}/${CIRCLE_PROJECT_REPONAME}:$TAG"
             echo $TF_CLOUD_TOKEN | base64 -d > $HOME/.terraformrc
